    SB-EXT:COMPILER-NOTE) for conforming code in default compilation
    mode; these hints are emitted when higher SPEED optimization is
    requested, as before.
  * the behaviour of the standard function ED is now customizeable by
    third parties through a hook variable: see ED's documentation
    string for information on the protocol.
  * the compiler no longer emits efficiency notes for (FUNCALL X)
    when the type of X is uncertain under default optimization
    settings.
  * fixed bug 276: mutating a binding of a specialized parameter to a
    method to something that is not TYPEP the specializer is now
    possible.
  * fixed bugs 45d and 118: DOUBLE-FLOAT[-NEGATIVE]-EPSILON now
    exhibit the required behaviour on the x86 platform.  (thanks to
    Peter van Eynde, Eric Marsden and Bruno Haible)
  * fixed bug 335: ATANH now computes the inverse hyperbolic tangent
    even for difficult arguments.  (reported by Peter Graves)
  * fixed bug 141a: the backquote printer now descends quoted
    structure.
  * fixed another bug in backquote printing: no more destructive
    modification of the form's list structure.  (reported by Brian
    Downing)

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.